--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 services:
-  details:
+  details-dev:
     build: .
     image: ghcr.io/violet-evergardenz/bookinfo-details:dev
     ports:
       - "8080:8080"
     environment:
-      SERVICE_VERSION: v1
+      SERVICE_VERSION: v2
+  details-uat:
+    build: .
+    image: ghcr.io/violet-evergardenz/bookinfo-details:uat
+    ports:
+      - "8080:8080"
+    environment:
+      SERVICE_VERSION: v2
+  details-prd:
+    build: .
+    image: ghcr.io/violet-evergardenz/bookinfo-details:prd
+    ports:
+      - "8080:8080"
+    environment:
+      SERVICE_VERSION: v2
